# gmpi_ui

./: .gitignore  Drawing.h  Drawing_API.h  GmpiApiCommon.h  GmpiApiDrawing.h  GmpiSdkCommon.h  GmpiUI.cpp  GmpiUI.h  GmpiUiDrawing.h  JuceGmpiComponent.cpp  JuceGmpiComponent.h  LICENSE  MpString.h  README.md  RefCountMacros.h  gmpi_common.h  mp_interface_wrapper.h
backends/: Bezier.h  CocoaGfx.h  CocoaGuiHost.h  DirectXGfx.cpp  DirectXGfx.h  DrawingFrameCocoa.h  DrawingFrameCommon.cpp  DrawingFrameCommon.h  DrawingFrameMac.h  DrawingFrameMac.mm  DrawingFrameWin.cpp  DrawingFrameWin.h  DrawingFrame_win32.cpp  DrawingFrame_win32.h  Gfx_base.h  GmpiCocoaView.mm  JuceGfx.h  MacColorDialog.h  MacEventHelpers.h  MacFileDialog.h  MacKeyListener.h  MacPopupMenu.h  MacStockDialog.h  MacTextEdit.h  MarkdownParser.h  gmpi_gui_hosting.cpp  gmpi_gui_hosting.h
experimental/: ComponentBuilders.cpp  ComponentBuilders.h  Drawables.cpp  Drawables.h  Form.cpp  Primatives.cpp  Primatives.h  Utils.h  builders.cpp  builders.h  forms.cpp  forms.h  grid.cpp  grid.h  observable.h  primatives.cpp  primatives.h  theme.h  ui_facades.cpp  ui_facades.h
experimental/tests/: CMakeLists.txt  ui_tests.cpp
helpers/: AnimatedBitmap.h  BitmapMask.h  CachedBlur.h  ContextMenuHelper.h  DrawingFactory.h  DrawingFactory_mac.mm  DrawingFactory_win.cpp  GinBlur.h  GmpiPluginEditor.h  GmpiPluginEditor2.h  GraphicsRedrawClient.h  IController.h  ImageCache.cpp  ImageCache.h  ImageMetadata.cpp  ImageMetadata.h  JuceGmpiComponent.cpp  JuceGmpiComponent.h  NativeUi.h  PixelSnapper.h  SavePng.h  SimplifyGraph.h  (+9 more)
(+187 files in other folders)
